Downgrade minimum Java requirement to 17