@@ -8,6 +8,7 @@ Setting up isolated databases for multiple applications or microservices typical
 
 **DBC solves all of this:**
 - **Zero Setup:** You don't need to install MySQL on your server! DBC includes an embedded MariaDB engine. The application is **fully cross-platform** and works out of the box on **Windows, Linux, and macOS**.
+- **Java 17+ Required:** Compatible with modern enterprise environments (runs perfectly on Java 17, 25, and newer).
 - **High Isolation:** Each database runs as a **separate, isolated process** on its own port. If one database hangs, the databases for other applications will continue to run perfectly.
 - **Auto-backups to Google Drive:** Built-in integration with `rclone` and AES-256 encryption (via Zip4j). Your backups will automatically be sent to the cloud in an encrypted format. *(Note: To upload to the cloud, the `rclone` utility must be installed on your computer/server. If it is not installed, DBC will still work and create local `.zip` archives, but will warn you that uploading is unavailable).*
 - **Single TOML Config:** Everything is managed through one clean and intuitive `config.toml` file.
@@ -45,5 +46,5 @@ Use these commands to control your databases via the built-in interactive consol
 The project is compiled using Maven.
 ```bash
 mvn clean package
-java --enable-native-access=ALL-UNNAMED -jar target/DBC.jar
+java -jar target/DBC.jar
 ```
